# sample-http-frontend

./: .editorconfig  .gitignore  Dockerfile  README.md  manage.py  podder.yaml  pyproject.toml
.circleci/: config.yml
config/: log.json
config/plugins/commands/http/: entrypoint.json
config/test_with_http_frontend/: interface.json  model.json
processes/test_with_http_frontend/: process.py
tests/: test_podder_task_base.py
